[workspace]
members = ["crm"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
prost = "0.13.4"
prost-build = "0.13.4"
prost-types = "0.13.4"
tonic = { version = "0.12.3", features = ["zstd", "tls"] }
tonic-build = "0.12.3"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
