[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
test-util = []

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
derive_builder = { workspace = true }
tokio-stream = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
uuid = { version = "1.12.1", features = ["v4"] }
nanoid = { workspace = true }
fake = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = "0.6.2"
tonic-build = { workspace = true }

[dev-dependencies]
crm-send = { workspace = true, features = ["test-util"] }
