[package]
name = "crm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
derive_builder = { workspace = true }
tokio-stream = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
sqlx-db-tester = { version = "0.5.0", optional = true }
user-stat = { workspace = true }
crm-metadata = { workspace = true }
crm-send = { workspace = true }
uuid = { workspace = true }
jwt-simple = { version = "0.12.11", default-features = false, features = [
  "pure-rust",
] }


[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
nanoid = { workspace = true }
