[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
derive_builder = { workspace = true }
tokio-stream = { workspace = true }
serde_yaml = { workspace = true }
futures = "0.3.31"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = "0.14.0"

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = "0.6.2"
tonic-build = { workspace = true }

[dev-dependencies]
fake = { version = "3.1.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"
