[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
test-util = ["sqlx-db-tester"]

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
derive_builder = { workspace = true }
tokio-stream = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
sqlx-db-tester = { version = "0.5.0", optional = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
nanoid = { workspace = true }
user-stat = { workspace = true, features = ["test-util"] }
